Fixed oval.svg not found, fixed map rendering, + add the map in the detail page

--- a/assets/css/_others.scss
+++ b/assets/css/_others.scss
@@ -53,8 +53,9 @@
     color: $light-grey;
     position: fixed;
     bottom: 0;
-    background: url("../../css/img/oval.svg");
+    background: url("../../assets/img/oval.svg");
     background-repeat: no-repeat;
+    
 
     p {
         width: 59%;
