--- a/assets/css/_settings.colors.scss
+++ b/assets/css/_settings.colors.scss
@@ -7,6 +7,7 @@ $primary-white        : #F2F4F4;
 $primary-white-transp : rgba(242, 244, 244, 0.6);
 $clear-grey           : #F9F9F9;
 $light-grey           : #979FA0;
+$middle-grey		  : #9BA3A4;
 $dark-grey            : #5F6666;
 $accent-blue          : #16C4B3;
 $accent-blue-transp   : rgba(22, 169, 179, 0.5);
