--- a/assets/css/_login.scss
+++ b/assets/css/_login.scss
@@ -1,5 +1,5 @@
-.login-button {
-    background-color: $primary-black;
+.aanmelden-button {
+    background-color: $light-grey;
     color: $primary-white;
     margin-left: auto;
     margin-right: auto;
@@ -7,9 +7,9 @@
     left: 0;
     right: 0;
     width: 75%;
-    height: 7.5em;
+    height: 3em;
     top: 65%;
-    border-radius: 1em;
+    border-radius: .5em;
 
     .fa {
         float: left;
@@ -23,7 +23,7 @@
         float: right;
         font-size: 2.5em;
         position: relative;
-        bottom: .3em;
+        bottom: .2em;
         right: 3.5em;
     }
 }
