--- a/assets/css/_locations.scss
+++ b/assets/css/_locations.scss
@@ -1,3 +1,19 @@
+.location-overlay {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+
+    img {
+        height : 100%;
+        object-fit: cover;
+    }
+}
+
 .location-text {
     i {
         font-size: 1em;
