--- a/assets/css/_locations.scss
+++ b/assets/css/_locations.scss
@@ -10,6 +10,7 @@
 
     img {
         height : 100%;
+        width: 100%;
         object-fit: cover;
     }
 }
@@ -42,15 +43,27 @@
     position: relative;
 
     .location-text {
-        position: relative;
-        left: 1.5em;
-        top: 11em;
+        position: absolute;
+        left: 1em;
+        bottom: 0;
+        width: 75%;
+        max-height: 100%;
     }
 
     p {
         font-family: 'Suez One';
         font-weight: 200;
-        font-size: 1.8em;
+        font-size: 1.4em;
+        line-height: 1em;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-height: 100%;
+    }
+
+    i {
+        position: relative;
+        bottom: .2em;
     }
 }
 
@@ -98,10 +111,6 @@
 
     .listed-location {
         height: 6em;
-    }
-
-    .location-text {
-        top: 1.5em;
     }
 }
 
