--- a/assets/css/_locations.scss
+++ b/assets/css/_locations.scss
@@ -34,6 +34,8 @@
         overflow: hidden;
         text-overflow: ellipsis;
         max-height: 100%;
+        text-shadow: 1px 1px $primary-black;
+        padding-bottom: 2px;
     }
 }
 
