--- a/assets/css/_settings.colors.scss
+++ b/assets/css/_settings.colors.scss
@@ -7,8 +7,9 @@ $primary-white        : #F2F4F4;
 $primary-white-transp : rgba(242, 244, 244, 0.6);
 $clear-grey           : #F9F9F9;
 $light-grey           : #979FA0;
-$middle-grey		  : #9BA3A4;
+$middle-grey          : #9BA3A4;
 $dark-grey            : #5F6666;
+$blueish-grey         : #657A78;
 $accent-blue          : #16C4B3;
 $accent-blue-transp   : rgba(22, 169, 179, 0.7);
 $accent-red           : #D32647;
