--- a/assets/css/_settings.colors.scss
+++ b/assets/css/_settings.colors.scss
@@ -3,6 +3,7 @@
  */
 
 $primary-black        : #272D2C;
+$primary-black-transp : rgba(39, 45, 44, 0.7);
 $primary-white        : #F2F4F4;
 $primary-white-transp : rgba(242, 244, 244, 0.6);
 $clear-grey           : #F9F9F9;
