--- a/assets/css/_login.scss
+++ b/assets/css/_login.scss
@@ -1,3 +1,41 @@
+.benches {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 0;
+
+    img {
+        height : 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+}
+
+.login-overlay {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 0;
+
+    background-color: $primary-black-transp;
+
+    img {
+        height : 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+}
+
 .login-page {
     background-color: $primary-black;
     position: absolute;
@@ -14,6 +52,7 @@
         font-size: 2.5em;
         margin-bottom: 0;
         margin-top: 2.8em;
+        z-index: 3;
     }
 
     h2 {
@@ -24,6 +63,7 @@
         margin-top: 0;
         position: relative;
         bottom: .5em;
+        z-index: 3;
     }
 
     .back-button {
@@ -32,6 +72,7 @@
         top: 50px;
         left: 1.4em;
         margin: 0;
+        z-index: 3;
     }
 
     .back-button .lines-icon {
@@ -39,6 +80,7 @@
         position: relative;
         top: 5px;
         font-weight: 600;
+        z-index: 3;
     }
 
     .register-link {
@@ -46,6 +88,7 @@
         position: absolute;
         top: 53px;
         right: 1.7em;
+        z-index: 3;
     }
 
     button {
@@ -64,6 +107,8 @@
         font-family: 'Open Sans';
         height: 2.8em;
         border-radius: .5em;
+        z-index: 3;
+        position: relative;
     }
 }
 
@@ -77,6 +122,7 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    z-index: 3;
 }
 
 .login-form .form-field {
@@ -85,6 +131,8 @@
     flex-grow: 0;
     display: flex;
     flex-direction: row;
+    z-index: 3;
+    background-color: #fff;
 
     label {
         width: 85px;
@@ -96,6 +144,7 @@
         text-align: left;
         font-family: 'Open Sans';
         font-size: .8em;
+        z-index: 3;
     }
 
     input {
@@ -107,6 +156,7 @@
         font-size: 1em;
         padding-left: 5px;
         box-sizing: border-box;
+        z-index: 3;
     }
 
     input:focus {
