--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,7 @@ html {
 	* {
 		margin: 0;
 		padding: 0;
+		font-family: 'Open Sans';
 	}
 }
 
@@ -25,4 +26,5 @@ body {
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
+	background-color: $light-grey;
 }
