--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #F9F9F9; }
+  height: 100%; }
   html * {
     margin: 0;
     padding: 0;
@@ -11,5 +11,21 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-color: #979FA0; }
+
+header {
+  height: 300px;
+  background-image: url(../img/benches.jpeg);
+  width: 100%;
+  position: relative; }
+
+.black-overlay {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(39, 45, 44, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
 
 /*# sourceMappingURL=style.css.map */
