--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,17 @@ body {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  background-color: #979FA0; }
+  background-color: #F9F9F9; }
 
 header {
   height: 300px;
-  background-image: url(../img/benches.jpeg);
   width: 100%;
   position: relative; }
+  header .benches {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    overflow: hidden; }
 
 .black-overlay {
   height: 100%;
