Navbar changing depending on url

--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -92,6 +92,16 @@ body {
     .highlight {
         color: $accent-blue;
     }
+
+    .highlightMap {
+        color: $accent-blue;
+    }
+    .highlightProfiel {
+        color: $accent-blue;
+    }
+    .highlightHome {
+        color: $accent-blue;
+    }
 }
 
 .separation {
