--- a/assets/css/_success-page.scss
+++ b/assets/css/_success-page.scss
@@ -2,6 +2,27 @@
  * Success page
  */
 
+
+.success-overlay {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 2;
+
+    background-color: $accent-blue-transp;
+
+    img {
+        height : 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+}
+
 .success-page {
 	height: 100%;
 	width: 100%;
@@ -11,26 +32,33 @@
 
 	.icon-close {
 		position: absolute;
-		top: .6em;
-		right: .6em;
-		font-size: 5em;
+		top: .8em;
+		right: .8em;
+		font-size: 2em;
+		z-index: 3;
 	}
 
 	.icon-check {
-		font-size: 35em;
+		font-size: 12em;
 		display: inline-block;
-		margin-top: .9em;
+		margin-top: 1em;
+		position: relative;
+		z-index: 3;
 	}
 
 	p {
-		font-size: 2.5em;
+		font-size: 1em;
 		margin-bottom: 0;
+		position: relative;
+		z-index: 3;
 	}
 
 	h2 {
-		font-size: 4.2em;
+		font-size: 1.8em;
 		margin-top: 0;
 		font-family: 'Suez One';
 		font-weight: 200;
+		position: relative;
+		z-index: 3;
 	}
 }
