--- a/assets/css/_ontdek-profiel.scss
+++ b/assets/css/_ontdek-profiel.scss
@@ -16,8 +16,6 @@
 
     text-align: center;
 
-    height: 27em;
-
     h1 {
         color: $middle-grey;
         font-family: 'Suez One';
@@ -31,12 +29,12 @@
         box-sizing: border-box;
         border: .2em solid $primary-white;
         border-radius: 50%;
-        width: 12em;
-        height: 12em;
+        width: 8em;
+        height: 8em;
         margin-left: auto;
         margin-right: auto;
-        background: url(../../assets/img/batman.jpg) center;
-        background-size: auto 12em;
+        background: url(../../assets/img/placeholder_profile.png) center;
+        background-size: auto 8em;
     }
 
     h2 {
