Added Four Oh Four page

--- a/assets/css/_settings.colors.scss
+++ b/assets/css/_settings.colors.scss
@@ -14,5 +14,6 @@ $blueish-grey         : #657A78;
 $accent-blue          : #16C4B3;
 $accent-blue-transp   : rgba(22, 169, 179, 0.7);
 $accent-red           : #D32647;
+$accent-red-transp	  : rgba(211, 38, 71, 0.7);
 $accent-yellow        : #E5B10C;
 $accent-yellow-transp : rgba(229, 177, 12, 0.8);
