Changed 404 page to blue background

--- a/assets/css/_fourohfour.scss
+++ b/assets/css/_fourohfour.scss
@@ -8,7 +8,7 @@
     left: 0;
     overflow: hidden;
     z-index: 2;
-    background-color: $accent-red-transp;
+    background-color: $accent-blue-transp;
 
     img {
         height : 100%;
