Added placeholder for locations without pictures in the half&half view

--- a/assets/css/_locations.scss
+++ b/assets/css/_locations.scss
@@ -113,6 +113,8 @@
 
     .listed-location {
         height: 6em;
+        background-size: cover;
+        background-position-y: 40%;
     }
 }
 
