--- a/assets/css/_locations.scss
+++ b/assets/css/_locations.scss
@@ -98,7 +98,7 @@
 }
 
 .ci-active {
-    background-color: $accent-yellow-transp;
+    background-color: $accent-yellow-transp !important;
 }
 
 .locations-list {
