--- a/assets/css/_locations.scss
+++ b/assets/css/_locations.scss
@@ -187,3 +187,10 @@
 
     }
 }
+
+p.not-yet {
+    text-align: center;
+    font-family: 'Suez One';
+    color: $dark-grey;
+    font-size: 1.3em;
+}
