--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-color: #272D2C;
-  background-image: src("../img/benches.png");
+  background-image: url("../img/benches.png");
   background-position: center top; }
 
 header {
