--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,7 +29,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	background-color: $primary-black;
-	background-image: src('../img/benches.png');
+	background-image: url("../img/benches.png");
 	background-position: center top;
 }
 
