--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,9 @@ body {
   margin-right: auto;
   background-color: #272D2C;
   background-image: url("../img/benches.png");
-  background-position: center top; }
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover; }
 
 header {
   height: 300px;
