--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,6 +31,8 @@ body {
 	background-color: $primary-black;
 	background-image: url("../img/benches.png");
 	background-position: center top;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 header {
