--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,7 +32,7 @@ body {
 	background-image: url("../img/benches.png");
 	background-position: center top;
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: 100% auto;
 }
 
 header {
