--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
   background-image: url("../img/benches.png");
   background-position: center top;
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: 100% auto; }
 
 header {
   height: 300px;
