--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,7 +14,8 @@ $accent-yellow        : #E5B10C;
 $accent-yellow-transp : rgba(229, 177, 12, 0.8);
 
 html {
-	height: 100%;
+	height: auto;
+	width: 100vw;
 
 	* {
 		margin: 0;
