--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,20 @@
-html {
-  height: auto;
-  width: 100vw; }
-  html * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Open Sans'; }
+html * {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans'; }
 
 body {
   height: 100%;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  background-color: #272D2C;
-  background-image: url("../img/benches.png");
-  background-repeat: no-repeat;
-  background-size: 100% auto; }
+  background-color: #272D2C; }
+  body .benches {
+    max-width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0; }
 
 header {
   height: 300px;
@@ -28,6 +28,7 @@ header {
     font-family: 'Suez One';
     color: #F2F4F4;
     font-size: 5em;
-    font-weight: 400; }
+    font-weight: 400;
+    z-index: 3; }
 
 /*# sourceMappingURL=style.css.map */
