--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0; }
+    z-index: 0;
+    overflow-x: hidden; }
 
 header {
   height: 300px;
