--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,6 +43,8 @@ header {
 	height: 300px;
 	width: 80%;
 	position: relative;
+	margin-left: auto;
+	margin-right: auto;
 
 	h1 {
 		position: relative;
@@ -69,6 +71,8 @@ header {
 
 section {
 	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
 
 	p {
 		font-family: 'Open Sans';
