--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,8 +40,7 @@ body {
 }
 
 header {
-	height: 300px;
-	width: 80%;
+	width: 38%;
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
@@ -53,7 +52,7 @@ header {
 		z-index: 1;
 		font-family: 'Suez One';
 		color: $primary-white;
-		font-size: 3em;
+		font-size: 3.5em;
 		font-weight: 400;
 		z-index: 3;
 		text-align: center;
@@ -66,6 +65,8 @@ header {
 		font-size: 1.5em;
 		font-weight: 400;
 		color: $light-grey;
+		position: relative;
+		right: .5em;
 	}
 }
 
@@ -79,6 +80,16 @@ section {
 		color: $primary-white;
 		margin-top: 2em;
 		margin-bottom: 2em;
+		position: relative;
+		z-index: 3;
+	}
+
+	h2 {
+		font-size: 1.9em;
+		font-weight: 400;
+		font-family: 'Suez One';
+		color: $accent-blue;
+		text-align: center;
 		position: relative;
 		z-index: 3;
 	}
@@ -107,4 +118,22 @@ section {
 		position: relative;
 		z-index: 3;
 	}
+}
+
+.center-p {
+	text-align: center;
+}
+
+a:* {
+	text-decoration: none;
+	color: $accent-blue-transp;
+}
+
+a:hover {
+	color: $accent-blue
+}
+
+.fa {
+	margin-left: 10px;
+	margin-right: 10px;
 }
