--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,6 @@ header {
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    z-index: 1;
     font-family: 'Suez One';
     color: #F2F4F4;
     font-size: 3.5em;
@@ -40,10 +39,12 @@ header {
     font-weight: 400;
     color: #979FA0;
     position: relative;
-    right: .5em; }
+    right: .2em;
+    bottom: .5em;
+    margin-bottom: 1em; }
 
 section {
-  width: 80%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto; }
   section p {
@@ -52,9 +53,12 @@ section {
     margin-top: 2em;
     margin-bottom: 2em;
     position: relative;
-    z-index: 3; }
+    z-index: 3;
+    width: 80%;
+    line-height: 1.4em;
+    font-size: 1.2em; }
   section h2 {
-    font-size: 1.9em;
+    font-size: 1.6em;
     font-weight: 400;
     font-family: 'Suez One';
     color: #16C4B3;
@@ -71,7 +75,7 @@ section {
   flex-wrap: nowrap; }
 
 .dim {
-  width: 25%;
+  width: 30%;
   flex-grow: 0;
   flex-shrink: 0; }
   .dim h3 {
@@ -82,6 +86,11 @@ section {
     text-align: center;
     position: relative;
     z-index: 3; }
+  .dim p {
+    margin-top: 1em;
+    width: 100%;
+    font-size: 1em;
+    line-height: 1.2em; }
 
 .center-p {
   text-align: center; }
