--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,9 @@ section {
     z-index: 3;
     width: 80%;
     line-height: 1.4em;
-    font-size: 1.2em; }
+    font-size: 1.2em;
+    margin-left: auto;
+    margin-right: auto; }
   section h2 {
     font-size: 1.6em;
     font-weight: 400;
