--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,8 @@ header {
 section {
   width: 70%;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  border-bottom: 1px solid rgba(242, 244, 244, 0.6); }
   section p {
     font-family: 'Open Sans';
     color: #F2F4F4;
