--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -75,6 +75,7 @@ section {
 	width: 70%;
 	margin-left: auto;
 	margin-right: auto;
+	border-bottom: 1px solid $primary-white-transp;
 
 	p {
 		font-family: 'Open Sans';
