Correction on CSS

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -76,6 +76,7 @@ section {
 	margin-left: auto;
 	margin-right: auto;
 	border-bottom: 1px solid $primary-white-transp;
+	margin-bottom: 1em;
 
 	p {
 		font-family: 'Open Sans';
