--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,8 @@ section {
   width: 70%;
   margin-left: auto;
   margin-right: auto;
-  border-bottom: 1px solid rgba(242, 244, 244, 0.6); }
+  border-bottom: 1px solid rgba(242, 244, 244, 0.6);
+  margin-bottom: 1em; }
   section p {
     font-family: 'Open Sans';
     color: #F2F4F4;
